[update] 配置颜色生成器，自动生成10个颜色

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -4,3 +4,50 @@
 
 @layer components {
 }
+/* screen_loader */
+.screen_loader-instance {
+  @apply space-x-2 flex items-center;
+}
+.screen_loader-instance span {
+  @apply w-2 sm:w-4 inline-block bg-primary rounded-lg;
+  animation: screen_loader 1s ease infinite;
+}
+.screen_loader-instance span:nth-child(1) {
+  animation-delay: 0.2s;
+}
+.screen_loader-instance span:nth-child(2) {
+  animation-delay: 0.4s;
+}
+.screen_loader-instance span:nth-child(3) {
+  animation-delay: 0.6s;
+}
+.screen_loader-instance span:nth-child(4) {
+  animation-delay: 0.8s;
+}
+.screen_loader-instance span:nth-child(5) {
+  animation-delay: 1s;
+}
+@keyframes screen_loader {
+  0%,
+  100% {
+    height: 30px;
+    @apply bg-primary-8;
+  }
+  50% {
+    height: 60px;
+    @apply bg-primary-2;
+  }
+}
+@media (min-width: 640px) {
+  @keyframes screen_loader {
+    0%,
+    100% {
+      height: 40px;
+      @apply bg-primary-8;
+    }
+    50% {
+      height: 100px;
+      @apply bg-primary-2;
+    }
+  }
+}
