[update] Finance & Crypto

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -32,7 +32,7 @@
 
   /* Panel */
   .panel {
-    @apply relative rounded-md bg-white p-5 shadow dark:bg-black-8;
+    @apply relative rounded-md bg-white p-5 shadow dark:bg-black-9 text-black-7 dark:text-white-7;
   }
   /* Navbar */
   .navbar-sticky header,
@@ -40,7 +40,7 @@
     @apply sticky top-0 z-20;
   }
   .navbar-floating header {
-    @apply bg-[#fafafa]/90 px-6 pt-4 dark:bg-[#060818]/90;
+    @apply px-6 pt-4;
   }
   .navbar-floating header > div > div:first-child {
     @apply rounded-md;
@@ -59,16 +59,19 @@
 
   .sidebar .nav-item > button,
   .sidebar .nav-item > a {
-    @apply mb-1 flex w-full items-center justify-between overflow-hidden whitespace-nowrap rounded-md p-2.5 text-[#506690] hover:bg-[#000]/[0.08] hover:text-black dark:hover:bg-[#181f32] dark:hover:text-white-5;
+    @apply mb-1 flex w-full items-center justify-between overflow-hidden whitespace-nowrap rounded-md p-2.5 text-black-7 hover:bg-[#000]/[0.08]  dark:hover:bg-[#181f32] dark:hover:text-white-5 hover:text-primary;
   }
   .sidebar .nav-item > button.active,
   .sidebar .nav-item > a.active {
-    @apply bg-[#000]/[0.08] text-black dark:bg-[#181f32] dark:text-white-5;
+    @apply bg-[#000]/[0.08] text-primary dark:bg-[#181f32] dark:hover:text-white-9;
   }
-
+  .sidebar .nav-item > button > div > span,
+  .sidebar .nav-item > a > div > span {
+    @apply dark:text-white-6;
+  }
   .sidebar .nav-item > button.active > div > span,
   .sidebar .nav-item > a.active > div > span {
-    @apply dark:!text-white-5;
+    @apply dark:text-white-7;
   }
 
   .sidebar ul.sub-menu li button,
@@ -117,19 +120,19 @@ hover:text-primary hover:before:!bg-primary ltr:before:mr-2 rtl:before:ml-2 dark
   .dark.horizontal .nav-item a div:first-child svg,
   .horizontal .dark .nav-item button div:first-child svg,
   .dark.horizontal .nav-item button div:first-child svg {
-    @apply text-white/50;
+    @apply text-white/50 hover:text-primary;
   }
 
   .horizontal-menu .nav-link {
-    @apply flex items-center rounded-lg px-2 py-2.5 hover:bg-[#000]/[0.08] hover:text-black dark:hover:bg-[#181f32] dark:hover:text-white-5 xl:px-4;
+    @apply flex items-center rounded-lg px-2 py-2.5 hover:bg-[#000]/[0.08] hover:text-primary dark:hover:bg-[#181f32] dark:hover:text-white-5 xl:px-4;
   }
 
   .horizontal-menu .nav-link.active {
-    @apply bg-[#000]/[0.08] text-black dark:bg-[#181f32] dark:text-white-5;
+    @apply bg-[#000]/[0.08] text-primary dark:bg-[#181f32] dark:text-white-5;
   }
 
   .horizontal-menu ul.sub-menu {
-    @apply absolute top-full z-[10] hidden min-w-[180px] rounded bg-white p-0 py-2 text-dark shadow dark:bg-[#1b2e4b] dark:text-white-5;
+    @apply absolute top-full z-[10] hidden min-w-[180px] rounded bg-white p-0 py-2 text-dark shadow dark:bg-black-7 dark:text-white-6;
   }
 
   .horizontal-menu ul.sub-menu a,
@@ -373,6 +376,49 @@ hover:text-primary hover:before:!bg-primary ltr:before:mr-2 rtl:before:ml-2 dark
     @apply border-dark bg-transparent bg-none;
   }
   /* #endregion */
+
+  /* tables */
+  .table-responsive {
+    @apply overflow-auto;
+  }
+  table {
+    @apply w-full !border-collapse;
+  }
+  table thead tr,
+  table tfoot tr {
+    @apply border-b-0 !bg-[#f6f8fa]  dark:!bg-[#1a2941];
+  }
+  table thead tr th,
+  table tfoot tr th,
+  table tbody tr td {
+    @apply px-4 py-3 ltr:text-left rtl:text-right;
+  }
+  table thead tr th,
+  table tfoot tr th {
+    @apply font-semibold;
+  }
+  table tbody tr {
+    @apply border-b !border-white-7/40 dark:!border-[#191e3a];
+  }
+  table.table-hover tbody tr {
+    @apply hover:!bg-white-7/20 dark:hover:!bg-[#1a2941]/40;
+  }
+  table.table-striped tbody tr:nth-child(odd) {
+    @apply !bg-white-7/20 dark:!bg-[#1a2941]/40;
+  }
+
+  table.dataTable-table tbody tr th,
+  table.dataTable-table tbody tr td {
+    @apply border-b border-white-light/40 px-4 py-3 ltr:text-left rtl:text-right dark:border-[#191e3a];
+  }
+  table.dataTable-table tbody tr:last-child td {
+    @apply border-b-0;
+  }
+
+  /* code hightlight */
+  pre {
+    direction: ltr;
+  }
 }
 
 /* screen_loader */
