--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1,5 +1,9 @@
 @import "./animate.css";
 @import "./mantine-datatable.css";
+@import "swiper/css";
+@import 'swiper/css/navigation';
+@import 'swiper/css/pagination';
+@import 'swiper/css/scrollbar';
 
 @tailwind base;
 @tailwind components;
