--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -34,12 +34,17 @@
     @apply bg-white-8 dark:bg-black-7 font-nunito text-black-7 dark:text-white-7;
   }
   /* #endregion */
+  .main-container .main-content {
+    @apply transition-all duration-300 lg:ltr:ml-[260px] lg:rtl:mr-[260px];
+  }
 
-  /* Panel */
+  /* #region Panel*/
   .panel {
     @apply relative rounded-md bg-white p-5 shadow dark:bg-black-8 text-black-7 dark:text-white-7;
   }
-  /* Navbar */
+  /* #endregion */
+
+  /* #region Navbar*/
   .navbar-sticky header,
   .navbar-floating header {
     @apply sticky top-0 z-20;
@@ -56,8 +61,9 @@
   .horizontal .navbar-floating header .horizontal-menu {
     @apply rounded-b-md;
   }
+  /* #endregion */
 
-  /* Sidebar */
+  /* #region Sidebar*/
   .sidebar:hover .nav-item > a {
     @apply w-auto;
   }
@@ -94,12 +100,9 @@ hover:text-primary hover:before:!bg-primary ltr:before:mr-2 rtl:before:ml-2 dark
   .sidebar .nav-item button div:first-child svg {
     @apply h-5 w-5 text-black/50 dark:text-white/50;
   }
+  /* #endregion */
 
-  .main-container .main-content {
-    @apply transition-all duration-300 lg:ltr:ml-[260px] lg:rtl:mr-[260px];
-  }
-
-  /* Horizontal layouts */
+  /* #region Horizontal layouts*/
   .horizontal .horizontal-menu {
     @apply hidden shadow-md lg:flex;
   }
@@ -154,8 +157,9 @@ hover:text-primary hover:before:!bg-primary ltr:before:mr-2 rtl:before:ml-2 dark
   .horizontal-menu > li.nav-item > ul.sub-menu > li:hover > ul {
     @apply block;
   }
+  /* #endregion */
 
-  /* Vertical layouts */
+  /* #region Vertical layouts*/
   .vertical.toggle-sidebar .horizontal-logo,
   .vertical.toggle-sidebar .collapse-icon {
     @apply flex;
@@ -169,6 +173,7 @@ hover:text-primary hover:before:!bg-primary ltr:before:mr-2 rtl:before:ml-2 dark
   .vertical.toggle-sidebar .sidebar {
     @apply ltr:left-0 rtl:right-0 lg:ltr:-left-[260px] lg:rtl:-right-[260px];
   }
+  /* #endregion */
 
   /* #region Buttons*/
   .btn {
@@ -240,7 +245,33 @@ hover:text-primary hover:before:!bg-primary ltr:before:mr-2 rtl:before:ml-2 dark
   .btn-gradient {
     @apply bg-gradient-to-r from-primary  to-[#EF1262] hover:from-[#EF1262]  hover:to-primary  text-white;
   }
+  /* #endregion */
 
+  /* #region Badge*/
+  .badge {
+    @apply relative my-1 rounded border border-transparent px-2 py-0.5 text-xs font-semibold text-white;
+  }
+  .badge-outline-primary {
+    @apply border-primary text-primary hover:bg-primary/60 dark:hover:bg-primary dark:hover:text-white-7;
+  }
+  .badge-outline-secondary {
+    @apply border-secondary text-secondary hover:bg-secondary/60 dark:hover:bg-secondary dark:hover:text-white-7;
+  }
+  .badge-outline-success {
+    @apply border-success text-success hover:bg-success/60 dark:hover:bg-success dark:hover:text-white-7;
+  }
+  .badge-outline-danger {
+    @apply border-danger text-danger hover:bg-danger/60 dark:hover:bg-danger dark:hover:text-white-7;
+  }
+  .badge-outline-warning {
+    @apply border-warning text-warning hover:bg-warning/60 dark:hover:bg-warning dark:hover:text-white-7;
+  }
+  .badge-outline-info {
+    @apply border-info text-info hover:bg-info/60 dark:hover:bg-info dark:hover:text-white-7;
+  }
+  .badge-outline-dark {
+    @apply border-dark text-dark hover:bg-dark/60 dark:hover:bg-dark dark:hover:text-white-7;
+  }
   /* #endregion */
 
   /* #region form表单*/
