--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -353,8 +353,8 @@ hover:text-primary hover:before:!bg-primary ltr:before:mr-2 rtl:before:ml-2 dark
   /* checkbox & radio */
   .form-radio,
   .form-checkbox {
-    @apply h-5 w-5 cursor-pointer rounded border-2 border-white/70 bg-transparent text-primary !shadow-none !outline-none !ring-0 !ring-offset-0 checked:bg-[length:90%_90%] disabled:cursor-not-allowed disabled:bg-white-4 ltr:mr-1.5 rtl:ml-1.5
-        dark:border-[#253b5c] dark:checked:border-transparent dark:disabled:bg-[#1b2e4b];
+    @apply h-5 w-5 cursor-pointer rounded border-2 border-white-8 bg-transparent text-primary !shadow-none !outline-none !ring-0 !ring-offset-0 checked:bg-[length:90%_90%] disabled:cursor-not-allowed disabled:bg-white-4 ltr:mr-1.5 rtl:ml-1.5
+        dark:border-black-6 dark:checked:border-transparent dark:disabled:bg-[#1b2e4b];
   }
 
   .form-checkbox.outline-primary:checked {
