[update] 修改next字体专用引入方式

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -31,7 +31,7 @@
     @apply scroll-smooth;
   }
   body {
-    @apply bg-white-8 dark:bg-black-7 font-nunito text-black-7 dark:text-white-7;
+    @apply bg-white-8 dark:bg-black-7 text-black-7 dark:text-white-7 font-nunito;
   }
   /* #endregion */
   .main-container .main-content {
