[update] Forms FileUpload

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -6,6 +6,8 @@
 @import "./select2.css";
 /* 使用swiper 引入swiper.css样式 */
 @import "./swiper.css";
+/* 使用file-upload 引入swiper.css样式 */
+@import "./file-upload.css";
 /* 使用matine系列库 引入matine.css样式 */
 @import "./mantine.css";
 
