--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -93,14 +93,18 @@
     @apply dark:text-white-7;
   }
 
-  .sidebar ul.sub-menu li button,
-  .sidebar ul.sub-menu li button,
-  .sidebar ul.sub-menu li a {
-    @apply flex w-full items-center px-9 py-2.5 before:h-0.5 before:w-2 before:rounded before:bg-gray-300 hover:bg-gray-100
+  /* .sidebar ul.sub-menu .nav-item button,
+  .sidebar ul.sub-menu .nav-item a {
+    @apply flex w-full justify-start items-center px-9 py-2.5 before:h-0.5 before:w-2 before:rounded before:bg-gray-300 hover:bg-gray-100
 hover:text-primary hover:before:!bg-primary ltr:before:mr-2 rtl:before:ml-2 dark:before:bg-gray-500 dark:hover:bg-gray-900 dark:hover:text-primary;
+  } */
+  .sidebar ul.sub-menu .nav-item button,
+  .sidebar ul.sub-menu .nav-item a {
+    @apply flex w-full justify-start items-center px-9 py-2.5  hover:bg-gray-100
+hover:text-primary dark:hover:bg-gray-900 dark:hover:text-primary;
   }
-  .sidebar ul.sub-menu li button.active,
-  .sidebar ul.sub-menu li a.active {
+  .sidebar ul.sub-menu .nav-item button.active,
+  .sidebar ul.sub-menu .nav-item a.active {
     @apply text-primary before:bg-primary;
   }
 
