--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -23,18 +23,20 @@
     @apply w-2 h-2;
   }
 
-  ::-webkit-scrollbar-track {
-    @apply bg-transparent;
+  ::-webkit-scrollbar-track,
+    /* react-perfect-scrollbar 统一滚动条滑轨背景*/
+  .ps__rail-x,
+  .ps__rail-y {
+    @apply !bg-transparent;
   }
 
-  ::-webkit-scrollbar-thumb {
-    @apply bg-slate-300 rounded-full;
+  ::-webkit-scrollbar-thumb,
+    /* react-perfect-scrollbar 统一滚动条滑块颜色*/
+  .ps__thumb-x,
+  .ps__thumb-y {
+    @apply !bg-white-5 rounded-full dark:!bg-black-5;
   }
 
-  .dark::-webkit-scrollbar-thumb,
-  .dark ::-webkit-scrollbar-thumb {
-    @apply bg-slate-700 rounded-full;
-  }
   html {
     @apply scroll-smooth;
   }
