--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -46,7 +46,13 @@
   p,
   span,
   a,
-  label {
+  label,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     @apply text-black-7 dark:text-white-7;
   }
   /* #endregion */
@@ -59,6 +65,20 @@
     @apply relative rounded-md bg-white p-5 shadow dark:bg-black-8 text-black-7 dark:text-white-7;
   }
   /* #endregion */
+
+  /* boxed-layout */
+  .boxed-layout {
+    @apply mx-auto max-w-[1400px];
+  }
+
+  .boxed-layout.vertical .sidebar,
+  .boxed-layout.collapsible-vertical .sidebar {
+    @apply overflow-hidden lg:ltr:left-auto lg:rtl:right-auto;
+  }
+
+  .boxed-layout.vertical.toggle-sidebar .sidebar {
+    @apply lg:w-0;
+  }
 
   /* #region Navbar*/
   .navbar-sticky header,
@@ -104,12 +124,6 @@
   .sidebar .nav-item > a.active > div > span {
     @apply text-primary;
   }
-
-  /* .sidebar ul.sub-menu .nav-item button,
-  .sidebar ul.sub-menu .nav-item a {
-    @apply flex w-full justify-start items-center px-9 py-2.5 before:h-0.5 before:w-2 before:rounded before:bg-gray-300 hover:bg-gray-100
-hover:text-primary hover:before:!bg-primary ltr:before:mr-2 rtl:before:ml-2 dark:before:bg-gray-500 dark:hover:bg-gray-900 dark:hover:text-primary;
-  } */
   .sidebar ul.sub-menu .nav-item button,
   .sidebar ul.sub-menu .nav-item a {
     @apply flex w-full justify-start items-center px-9 py-2.5  hover:bg-white-8/[0.5] hover:text-primary dark:hover:bg-black-7/[0.5] dark:hover:text-primary;
@@ -154,57 +168,14 @@ hover:text-primary hover:before:!bg-primary ltr:before:mr-2 rtl:before:ml-2 dark
     @apply text-white/50 hover:text-primary;
   }
 
-  /* .horizontal-menu .nav-link {
-    @apply flex items-center rounded-lg px-2 py-2.5 hover:bg-[#000]/[0.08] hover:text-primary dark:hover:bg-[#181f32] dark:hover:text-white-5 xl:px-4;
-  }
-
-  .horizontal-menu .nav-link.active {
-    @apply bg-[#000]/[0.08] text-primary dark:bg-[#181f32] dark:text-white-5;
-  }
-
-  .horizontal-menu ul.sub-menu {
-    @apply absolute top-full z-[10] hidden min-w-[180px] rounded bg-white p-0 py-2 text-dark shadow dark:bg-black-7 dark:text-white-6 max-h-56 overflow-y-scroll;
-  }
-
-  .horizontal-menu ul.sub-menu a,
-  .horizontal-menu ul.sub-menu button {
-    @apply flex w-full items-center justify-between px-4 py-2 hover:bg-gray-100 hover:text-primary dark:hover:bg-primary/10;
-  }
-
-  .horizontal-menu ul.sub-menu a.active,
-  .horizontal-menu ul.sub-menu button.active {
-    @apply bg-gray-100 text-primary dark:bg-primary/10;
-  }
-
-  .horizontal-menu > li.nav-item:hover > ul.sub-menu,
-  .horizontal-menu > li.nav-item > ul.sub-menu > li:hover > ul {
-    @apply block;
-  } */
-
   .horizontal-menu .nav-link {
     @apply flex items-center rounded-lg p-2 hover:bg-[#000]/[0.08] hover:text-primary dark:hover:bg-primary/50 dark:hover:text-white-5 xl:px-4;
   }
   .nav-link.active,
-  .nav-link.active span {
+  .nav-link.active span,
+  .nav-link.active svg {
     @apply !text-primary;
   }
-  /*
-  .horizontal-menu .nav-link.active {
-    @apply bg-[#000]/[0.08] text-primary dark:bg-primary/50 dark:text-white-5;
-  }
-  .horizontal-menu.sub-menu {
-    @apply w-full min-w-[180px] max-h-[300px] py-2 overflow-y-scroll;
-  }
-  .horizontal-menu.sub-menu li {
-    @apply flex w-full items-center justify-between px-4 py-2 hover:bg-gray-100 hover:text-primary dark:hover:bg-primary/10;
-  }
-  .horizontal-menu.sub-menu li button,
-  .horizontal-menu.sub-menu li a {
-    @apply flex w-full items-center justify-between;
-  }
-  .horizontal-menu.sub-menu li.active {
-    @apply bg-gray-100 text-primary dark:bg-primary/10;
-  } */
   /* #endregion */
 
   /* #region Vertical layouts*/
