--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -606,3 +606,23 @@
 .mantine-Combobox-option {
   @apply data-[combobox-active]:bg-primary/30;
 }
+
+/* rc-tree */
+.rc-tree-checkbox {
+  width: 20px !important;
+  height: 20px !important;
+  @apply inline-block cursor-pointer rounded border-2 border-white-5 bg-transparent text-primary !shadow-none !outline-none !ring-0 !ring-offset-0 checked:bg-[length:90%_90%] disabled:cursor-not-allowed disabled:bg-[#eee] ltr:mr-1.5 rtl:ml-1.5
+    dark:border-[#253b5c] dark:checked:border-transparent dark:disabled:bg-[#1b2e4b];
+}
+.rc-tree-checkbox.rc-tree-checkbox-checked {
+  @apply border-transparent;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url("data:image/svg+xml,<svg  xmlns='http://www.w3.org/2000/svg'  width='24'  height='24'  viewBox='0 0 24 24'  fill='rgb(27,173,170)'  class='icon icon-tabler icons-tabler-filled icon-tabler-square-check'><path stroke='none' d='M0 0h24v24H0z' fill='none'/><path d='M18.333 2c1.96 0 3.56 1.537 3.662 3.472l.005 .195v12.666c0 1.96 -1.537 3.56 -3.472 3.662l-.195 .005h-12.666a3.667 3.667 0 0 1 -3.662 -3.472l-.005 -.195v-12.666c0 -1.96 1.537 -3.56 3.472 -3.662l.195 -.005h12.666zm-2.626 7.293a1 1 0 0 0 -1.414 0l-3.293 3.292l-1.293 -1.292l-.094 -.083a1 1 0 0 0 -1.32 1.497l2 2l.094 .083a1 1 0 0 0 1.32 -.083l4 -4l.083 -.094a1 1 0 0 0 -.083 -1.32z' /></svg>") !important;
+}
+.rc-tree-checkbox.rc-tree-checkbox-indeterminate {
+  @apply border-transparent;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url("data:image/svg+xml,<svg  xmlns='http://www.w3.org/2000/svg'  width='24'  height='24'  viewBox='0 0 24 24'  fill='rgb(27,173,170)'  class='icon icon-tabler icons-tabler-filled icon-tabler-square-minus'><path stroke='none' d='M0 0h24v24H0z' fill='none'/><path d='M19 2a3 3 0 0 1 3 3v14a3 3 0 0 1 -3 3h-14a3 3 0 0 1 -3 -3v-14a3 3 0 0 1 3 -3zm-4 9h-6l-.117 .007a1 1 0 0 0 .117 1.993h6l.117 -.007a1 1 0 0 0 -.117 -1.993z' /></svg>") !important;
+}
